# MEBC

./: .gitignore  CMakeLists.txt  Makefile
Core/: CMakeLists.txt
Core/include/: IBehaviour.h  IComponent.h  IEntity.h  IManager.h  IObject.h  mebc.h
Core/src/: IBehaviour.cpp  IComponent.cpp  IEntity.cpp  IManager.cpp  IObject.cpp
Demo_HelloWorld/: CMakeLists.txt
Demo_HelloWorld/src/: main.cpp
Demo_HelloWorld/src/Common/: Book.cpp  Book.h
Demo_HelloWorld/src/LibraryManager/: LibraryManager.cpp  LibraryManager.h
Demo_HelloWorld/src/Student/: Student.cpp  Student.h  StudentLentBook.cpp  StudentLentBook.h
Demo_ScriptEngine/: CMakeLists.txt
Demo_ScriptEngine/src/: EngineManager.cpp  EngineManager.h  ScriptBehaviour.cpp  ScriptBehaviour.h  main.cpp
Demo_ScriptEngine/src/scripts/: Attack.cpp  Attack.h  Player.h  Walk.cpp  Walk.h
